# api/node/api/controllers/notifications.js
@@ -19,9 +19,15 @@ module.exports = {
 
 function addNotification(req, res) {
   var notification = Notification(req.body);
+  if (notification.email !== req.user.email) {
+    res.status(403).send('Users can only submit notifications for themselves.');
+    return;
+  }
   Notification.findOne({ searchQuery: notification.searchQuery, email: notification.email }).then( function (existing) {
     if (existing) {
-      throw "Search query '" + notification.searchQuery + "' already exists.";
+      const error = new Error("Search query '" + notification.searchQuery + "' already exists.");
+      error.class = 'exists';
+      throw error;  
     }
     return Promise.resolve(false);
   }).then( function (data) {
@@ -29,7 +35,11 @@ function addNotification(req, res) {
   }).then( function (data) {
     res.status(200).end(); // No body will be sent
   }).catch( function (error) {
-    res.status(500).send('Error adding notification: ' + util.inspect(error));
+    if (error.class === 'exists') {
+      res.status(400).send(error.message);
+    } else {
+      res.status(500).send('Unexpected error: ' + util.inspect(error));
+    }
   });
 }
 
@@ -39,61 +49,46 @@ function deleteNotification(req, res) {
     res.status(400).send('No search query specified.');
     return;
   }
-  let email = getEmailFromToken(req.header("Authorization"));
-  if (!email) {
-    res.status(400).send("Couldn't get email from token.");
-    return;
-  }
-  Notification.findOne({ email: email, searchQuery: searchQuery })
-    .exec()
-    .then( function (notification) {
-      if (notification == null) {
-        res.status(404).send('Could not find a notification with that query.')
-      } else {
-        Notification.remove({ email: email, searchQuery: searchQuery }, function(err) {
-          if (!err) {
-            res.status(204).send();
-          } else {
-            res.status(500).send('Error: ' + util.inspect(err));
-          }
-        });
-      }
-    });
+  Notification.findOne({ email: req.user.email, searchQuery: searchQuery }).then( function (notification) {
+    if (notification == null) {
+      const error = new Error('Could not find a notification with that query.');
+      error.class = 'not found';
+      throw error;
+    }
+    return Notification.remove({ email: email, searchQuery: searchQuery });
+  }).then( function() {
+    res.status(204).send();
+  }).catch( function (error) {
+    if (error.class === 'not found') {
+      res.status(404).send(error.message);
+    } else {
+      res.status(500).send('Error: ' + util.inspect(err));
+    }
+  });
+}
+
+function deleteAllNotifications(req, res) {
+  Notification.remove({ email: req.user.email }).then( function() {
+    res.status(204).end(); // No body
+  }).catch( function (error) {
+    res.status(500).send('Unexpected error: ' + util.inspect(error));
+  });
 }
 
 function listNotifications(req, res) {
-  let email = getEmailFromToken(req.header("Authorization"));
-  if (email == null) {
-    res.status(400).send('Token error.');
-    return;
-  }
-
   const offset = req.swagger.params.offset.value;
   const limit = req.swagger.params.limit.value;
-  const find = Notification.find({ email: email });
+  const find = Notification.find({ email: req.user.email });
   if (limit) {
     find.limit(limit);
   }
   if (offset) {
     find.skip(offset);
   }
-  find.exec().then( function (data) {
+  find.then( function (data) {
     res.status(200).json(data);
   }).catch( function (error) {
     res.status(500).send("Unexpected error: " + util.inspect(error));
   });
 }
 
-function getEmailFromToken(token, req, res, callback) {
-
-  const authKey = "-----BEGIN CERTIFICATE-----\nMIIC9TCCAd2gAwIBAgIJT/D4Z70A53iZMA0GCSqGSIb3DQEBCwUAMBgxFjAUBgNVBAMTDWlyZi5hdXRoMC5jb20wHhcNMTgwNDA3MDY0MDA4WhcNMzExMjE1MDY0MDA4WjAYMRYwFAYDVQQDEw1pcmYuYXV0aDAuY29tMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAwnl3R1vlP7G63vk5vTwdG7XKIJRyOtw38jkVpZ754JMhr7cxIefb6cqrhmmVA2atB90P5sQILVdfq4Jo7y+dBBGL6ZtnPSUnWWvISMCYsJi0Wbbc4HlZZMlC3hLP2isZL70RLcBJWQbuAFM5XH8nutJTjqj1KQbjxMkn5892JQMuchtjr6iTnIu00bFy/7lWm6pIWAAKICFkvntXadEQhEt6CHA9QcRLuUy2bOjgHFY+CBqFVfzlJ/kfvNISeuf8Rp0h1v7kaB2r4wGAEx5DK28EKCp3ZDeqvrHEPeHc6UA/e0Y8Oi2dfdMyphvjwLl0lKIBi8MJmelAbqzOtensiQIDAQABo0IwQDAPBgNVHRMBAf8EBTADAQH/MB0GA1UdDgQWBBTDk/6ggHGnZgmQGjQpsojN2RzphDAOBgNVHQ8BAf8EBAMCAoQwDQYJKoZIhvcNAQELBQADggEBAKmB4lF5cFNFpn8tuZEVbILvzkGwxTXy2zz8IPStrCLa8YCyjQjcsKF3kss+Oay8WbXqjEIIsc0Kzox/Z0GfbUdgThv1ADzu8DQLDmoyyBTUAErbjo9yflVKqiwY7mT7KzN6CaT6e6h9wpWKKbjPSXjRZfxR1+NGENx3/wytA3zirWhv9/hxz3hxC7d6nu75MJGkWomoYS7d8uvOQR6Lt+QMJJqlc05qMRkCPflvq4ik1CYO6GTfHZp+TYfL5tOlZBo8GzVZVqK0Dtt710d5jftzn6j8iv2pSuy/ydxzhsD8bhDMDCIgMQEJ/5DbdKK7g/ZRUuqNBCS+JWaR9dBaPAI=\n-----END CERTIFICATE-----";
-
- console.log("Verifying token: " + token);
- token = token.replace(/bearer /i, "");
- const decoded = jwt.verify(token, authKey, { "algorithms": [ "RS256", "HS256" ], "issuer": "https://irf.auth0.com/" });
- if (decoded) {
-   return decoded.email;
- } else {
-   return null;
- }
-};
