# api/node/app.js
@@ -1,13 +1,12 @@
 'use strict';
 
-var SwaggerExpress = require('swagger-express-mw');
-var app = require('express')();
-const jwt = require("jsonwebtoken");
-module.exports = app; // for testing
+const SwaggerExpress = require('swagger-express-mw');
+const app = require('express')();
+const ensureAuthenticatedUser = require('./tokenUtils').ensureAuthenticatedUser;
 
+// Initialize our interfact to MongoDB (mongoose) and required models
 const mongoose = require('mongoose');
 const User = mongoose.models.User;
-// Preload models so they can be read via mongoose downstream.
 // Note that the order is important.  Some models depend on other models.
 require('./api/models/user');
 require('./api/models/post');
@@ -30,6 +29,17 @@ app.use(function(req, res, next) {
   next();
 });
 
+// Add authentication to endpoints that need it
+app.post("/posts", ensureAuthenticatedUser);
+app.put("/posts/:id", ensureAuthenticatedUser);
+app.delete("/posts/:id", ensureAuthenticatedUser);
+app.post("/users", ensureAuthenticatedUser);
+app.get("/users/posts", ensureAuthenticatedUser);
+app.post("/notifications", ensureAuthenticatedUser);
+app.delete("/notifications", ensureAuthenticatedUser);
+app.delete("/notifications/:query", ensureAuthenticatedUser);
+app.get("/notifications", ensureAuthenticatedUser);
+
 var config = {
   appRoot: __dirname // required config
 };
@@ -44,3 +54,4 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   app.listen(port);
 
 });
+
